really fix kicker left align this time

--- a/css/styles.less
+++ b/css/styles.less
@@ -871,7 +871,6 @@ naming-files {
 
     	.wf-active .kicker { /* the fallback sans-serif font is bigger than my web font so I kick down the word-spacing to fit, then reset it here */
     	word-spacing: normal;
-    	text-align: justify;
     	}
     	
     	nav ul li{
